--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
   ],
   "require": {
     "php": "^8.2.0",
-    "illuminate/support": "^8.0|^9.0|^10.0",
-    "illuminate/database": "^8.0|^9.0|^10.0",
+    "illuminate/support": "^12.0",
+    "illuminate/database": "^12.0",
     "ext-ctype": "*"
   }
 }
